# opt_word_map

./: .gitignore  README.md  asset-manifest.json  docker-compose.yaml  index.html  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
backend/: consts.py  main.py
backend/src/: schema.py  scraper.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Graph.js
frontend/src/data/: list_opt_term.json
static/js/: 2.5f42ac6c.chunk.js  2.5f42ac6c.chunk.js.map  main.5ec80217.chunk.js  main.5ec80217.chunk.js.map  runtime-main.8f63a4ff.js  runtime-main.8f63a4ff.js.map
