[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["atsuhiro <jhuim08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
beautifulsoup4 = "*"
networkx = "*"
matplotlib = "*"
pydantic = "*"
tqdm = "*"
japanize-matplotlib = "^1.1.3"
plotly = "^5.22.0"

[tool.ruff]
# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"